--- a/Julia_CV.yaml
+++ b/Julia_CV.yaml
@@ -197,9 +197,9 @@ cv:
         position: "Formação de Professores em Neuroeducação SEB"
         start_date: 2025-03
 
-      - company: "Coursera"
+      - company: "Johns Hopkins University"
         position: "Psychological First Aid"
-        start_date: 2023
+        date: 2023
 
       - company: Beneficiência Portuguesa de Ribeirão Preto
         position: "XII curso de psicologia hospitalar: introdução à prática no atendimento breve dentro do hospital geral"
