--- a/Julia_CV_psychologist.yaml
+++ b/Julia_CV_psychologist.yaml
@@ -253,78 +253,50 @@ cv:
         position: Fótografa
         location: Campinas - SP
 
+
+# settings:
+#   current_date: '2026-01-04'
+
+
 design:
   theme: classic
-  font: Source Sans 3
-  font_size: 10pt
-  page_size: letterpaper
-  color: "#004f90"
-  disable_external_link_icons: false
-  disable_page_numbering: false
-  page_numbering_style: NAME - Pág PAGE_NUMBER de TOTAL_PAGES
-  disable_last_updated_date: false
-  last_updated_date_style: Atualizado pela última vez - TODAY
-  header_font_size: 30 pt
-  text_alignment: justified
-  seperator_between_connections: ""
-  use_icons_for_connections: true
-  margins:
-    page:
-      top: 2 cm
-      bottom: 2 cm
-      left: 2 cm
-      right: 2 cm
-    section_title:
-      top: 0.3 cm
-      bottom: 0.2 cm
-    entry_area:
-      left_and_right: 0.2 cm
-      vertical_between: 0.2 cm
-      date_and_location_width: 4.5 cm
-      education_degree_width: 1 cm
-    highlights_area:
-      top: 0.10 cm
-      left: 0.4 cm
-      vertical_between_bullet_points: 0.10 cm
-    header:
-      vertical_between_name_and_connections: 0.3 cm
-      bottom: 0.3 cm
-      horizontal_between_connections: 0.5 cm
+  # font: Source Sans 3
+  # font_size: 10pt
+  # page_size: letterpaper
+  # color: "#004f90"
+  # disable_external_link_icons: false
+  # disable_page_numbering: false
+  # page_numbering_style: NAME - Pág PAGE_NUMBER de TOTAL_PAGES
+  # disable_last_updated_date: false
+  # last_updated_date_style: Atualizado pela última vez - TODAY
+  # header_font_size: 30 pt
+  # text_alignment: justified
+  # seperator_between_connections: ""
+  # use_icons_for_connections: true
+  # margins:
+  #   page:
+  #     top: 2 cm
+  #     bottom: 2 cm
+  #     left: 2 cm
+  #     right: 2 cm
+  #   section_title:
+  #     top: 0.3 cm
+  #     bottom: 0.2 cm
+  #   entry_area:
+  #     left_and_right: 0.2 cm
+  #     vertical_between: 0.2 cm
+  #     date_and_location_width: 4.5 cm
+  #     education_degree_width: 1 cm
+  #   highlights_area:
+  #     top: 0.10 cm
+  #     left: 0.4 cm
+  #     vertical_between_bullet_points: 0.10 cm
+  #   header:
+  #     vertical_between_name_and_connections: 0.3 cm
+  #     bottom: 0.3 cm
+  #     horizontal_between_connections: 0.5 cm
   # show_timespan_in:
   #   - Experiência
 
-locale_catalog:
-  phone_number_format: national
-  date_style: "MONTH_ABBREVIATION YEAR"
-  abbreviations_for_months:
-    - Jan
-    - Fev
-    - Mar
-    - Abr
-    - Maio
-    - Jun
-    - Jul
-    - Ago
-    - Set
-    - Out
-    - Nov
-    - Dez
-  full_names_of_months:
-    - Janeiro
-    - Fevereiro
-    - Março
-    - Abril
-    - Maio
-    - Junho
-    - Julho
-    - Agosto
-    - Setembro
-    - Outubro
-    - Novembro
-    - Dezembro
-  month: mês
-  months: meses
-  year: ano
-  years: anos
-  present: o momento
-  to: até
+locale:
+  language: portuguese
